# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.49 2005/01/22 00:38:37 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  21 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  partition() now waits until after it checks for partition flags before delete
  the partitions :P

  19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Updated TODO. swapon failure it temporarily not an error. swapon is an error
  again. is_uri() check only performed on portage_tree_snapshot_uri if it isn't
  blank.

  19 Jan 2005; Preston Cody <codeman@gentoo.org>
  Various fixes related to the add_users function.  Still not yet finished.
  Added things to the TODO list.  Lets start using that!

  18 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added code to x86Template to format newly created partitions. Also added
  some error checking code. GLIStorageDevice passes 'minor' with data to
  InstallProfile. Added partition() call back in ArchTemplate. Fixed NFS
  mounting code.

  18 Jan 2005; Preston Cody <codeman@gentoo.org>
  Took out unnecessary setting of random livecd root password. the cd already
  sets it randomly.
  
  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Took out an unneeded step from CC's run()

  15 Jan 2005; Preston Cody	<codeman@gentoo.org>
  Attempt at detecting and adding windows partitions to lilo.
  
  14 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added lilo code and cleaned up lilo code.  also do_partitioning renamed to 
  partition. fixed misc exit_status => exitstatus typo.
  
  11 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added basic code for resizing filesystems with pyparted. Fixed code for
  resizing ntfs and ext2/3.

  10 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed partition() in x86Template so that it scans through logicals and deletes
  before deleting containing extended partition. Also clears partition table to
  be safe before third pass.
