@@ -4,7 +4,7 @@
 dialogfe (05 Jan 2005):
   
   22 Jan 2005; Preston Cody <codeman@gentoo.org>
-  Finished initital coding of additional_users.
+  Finished initital coding of additional_users. more text detail.
 
   19 Jan 2005; Preston Cody <codeman@gentoo.org>
   Added Group Membership for additional_users and fixed a [ instead of ( bug.
