@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.49 2005/01/22 00:38:37 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.50 2005/01/22 08:28:46 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  22 Jan 2005; Preston Cody <codeman@gentoo.org>
+  changed default value of CC._enable_ssh to True because this is smart.
 
   21 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   partition() now waits until after it checks for partition flags before delete
